# python-sandbox

./: .gitignore  README.md  pyproject.toml  requirements.txt
aws/: get_latest_ecr_version.py
cli/: clint_arg_parser_cli.py  interactive_python_cli_1.py  progress_bar_1.py  progress_bar_2.py  progress_bar_3.py  progress_bar_4.py  render_text_cli.py
encryption/: create_pgp_keys.py  create_rsa_keys.py  file_decrypt_pgp.py  file_decrypt_rsa.py  file_encrypt_pgp.py  file_encrypt_rsa.py  keyring_storage_and_retrieval.py  password_generator_simple.py  password_hashing.py
functools/: caching.py  partial.py  partial_2.py  single_dispatch.py
json/: json_validation.py  json_validation_extended.py
jwt/: create_jwt_token.py  read_validate_jwt_token.py
misc/: check_required_keys_exist_in_a_dict.py  no_conditions.py  using_dataclass.py  using_enums.py
networking/: chat_server.py  echo_client.py  echo_server.py  epoll_server.py  forked_server.py  host.py  threading_server.py
pdf/: combine_pdfs.py  create_pdf.py  rotate_first_page.py  split_half_half.py
toml/: toml_reader.py  toml_writer.py
