[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Andrew Hendley <amhendley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
borb = "^2.0.32"
boto3 = "^1.24.56"
click = "^8.1.3"
cryptography = "^37.0.4"
jsonschema = "^4.14.0"
loremipsum = "^1.0.5"
toml = "^0.10.2"
rtoml = "^0.8.0"
PGPy = "^0.5.4"
PyJWT = "^2.4.0"
keyring = "^23.8.2"
passlib = "^1.7.4"
bcrypt = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
