[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Andrew Hendley <amhendley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
borb = "^2.1.25"
boto3 = "^1.38.9"
click = "^8.1.8"
cryptography = "^44.0.3"
jsonschema = "^4.23.0"
loremipsum = "^1.0.5"
toml = "^0.10.2"
PGPy = "^0.5.4"
#pyarrow = "^14.0.2"
PyJWT = "^2.4.0"
keyring = "^25.6.0"
passlib = "^1.7.4"
bcrypt = "^4.3.0"
tqdm = "^4.67.1"
progressbar = "^2.5"
pyinquirer = "^1.0.3"
pyfiglet = "^1.0.1"
fastapi = "^0.115.12"
nicegui = "^2.16.1"
click-didyoumean = "^0.3.1"
rich = "^14.0.0"

[dev.dependencies]

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"
